<resources>
    <string name="app_name">Cast Example</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="default_ip_address">192.168.1.1</string>
    <string name="tcp_port">TCP port</string>
    <string name="default_tcp_port">5828</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="toggle_run">Toggle run</string>
    <string name="capture_image">Capture image</string>
    <string name="ask_state">Ask state</string>
    <string name="ultrasound_image">Ultrasound image</string>
    <string name="get_raw_data">Get raw data</string>
    <string name="ip_address">IP address</string>
    <string name="network_id">Network ID</string>
    <string name="spinner_default">Choose an option</string>

    <string-array name="procedures_array">
        <item>Femoral Nerve Block</item>
        <item>Transabdominal Plane Block</item>
        <item>Brachial Plexus Block</item>
    </string-array>

    <string name="content_desc_button_next">Next Slide</string>
    <string name="content_desc_button_previous">Previous Slide</string>

</resources>
